Fix animation stuck issue

--- a/HTML/Bouncy_Ball/bouncy_ball.css
+++ b/HTML/Bouncy_Ball/bouncy_ball.css
@@ -1,13 +1,14 @@
 .ball {
     position: relative;
-    left: calc(100% - 20rem);
+    left: 0%;
     background-color: #ffb33a;
     width: 20rem;
     height: 20rem;
     border-radius: 10rem;
-    animation: bounce 3s;
+    -webkit-animation-name: bounce;
+    -webkit-animation-duration: 10s;
     animation-timing-function: cubic-bezier(0.5, -0.5, 0.5, 1.5);
-    animation-iteration-count: infinite;
+    -webkit-animation-iteration-count: infinite;
     animation-direction: alternate;
 }
 @keyframes bounce {
